# adp-forecast-cli

./: .gitignore  Claude-ADP employment forecasting CLI tool.md  PLAN.md  PROMPTS.md  README.md  TRADEOFFS.md  pyproject.toml
adp_ner/: __init__.py  __main__.py  backtest.py  cli.py  data.py  explain.py  models.py  series.py
tests/: conftest.py  test_backtest.py  test_cli.py  test_data.py  test_explain.py  test_models.py  test_series.py
tests/fixtures/: mini_history.csv
