[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "adp-ner-forecast"
version = "0.1.0"
description = "Track and forecast the ADP National Employment Report headline series."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
adp = "adp_ner.cli:main"

[tool.setuptools.packages.find]
include = ["adp_ner*"]

[tool.pytest.ini_options]
addopts = "-v"
testpaths = ["tests"]
